len/src/snapshots/len__ast__tests__app.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: Some(
        FunctionCall(
            FunctionCall {
                function: Identifier(
                    Identifier {
                        name: "foo",
                    },
                ),
                argument: Literal(
                    Integer(
                        1,
                    ),
                ),
            },
        ),
    ),
    errs: [],
}
