len/src/snapshots/len__ast__tests__bad-grouping.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: None,
    errs: [
        found 'Ident(
            "foo",
        )' at 1..2 expected 'LeftCurly', 'LeftParenthesis', "atom", or 'RightParenthesis',
    ],
}
