len/src/snapshots/len__ast__tests__empty.snap
---
source: src/ast.rs
expression: p.parse(input.1)
---
ParseResult {
    output: None,
    errs: [
        found end of input at 0..0 expected 'LeftCurly', or 'LeftParenthesis',
    ],
}
